# tensorflowlite-build

./: .gitignore  CMakeLists.txt  README.md  build-macos-universal-static_lib.sh  build-static-lib-macos-universal.sh  build-static-lib.sh  build-static_lib.sh  tflite.py
.github/workflows/: build.yml  update.yml
static-lib/: CMakeLists.txt  bundle_static_library.cmake
static-lib/tests/: CMakeLists.txt
static_lib/: CMakeLists.txt
static_lib/tests/: CMakeLists.txt  model_test.cc
